--- a/app/src/main/res/layout/activity_book01.xml
+++ b/app/src/main/res/layout/activity_book01.xml
@@ -5,8 +5,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
-    android:backgroundTint="@color/white"
+    android:background="@color/black"
+    android:backgroundTint="@color/black"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     tools:context=".BookActivity_01">
@@ -197,16 +197,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/destinate"
         app:srcCompat="@drawable/arrow" />
-
-    <TextView
-        android:id="@+id/test1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="109dp"
-        android:layout_marginTop="393dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
