--- a/app/src/main/res/layout/activity_book03.xml
+++ b/app/src/main/res/layout/activity_book03.xml
@@ -126,7 +126,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/pay"
         android:layout_width="146dp"
         android:layout_height="48dp"
         android:layout_marginStart="156dp"
